# b3-ingestion-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  testdock  tree.command.bash  tree.txt
api/: README.md  __main__.py  dockerfile  pyproject.toml  pytest.ini  requirements.txt  tree.txt
api/src/api/core/_shared/domain/: entity.py
api/src/api/core/category/domain/: category.py  category_repository.py
api/src/api/core/category/infra/: in_memory_category_repository.py
api/src/api/core/document/domain/: document.py  document_repository.py
api/src/api/core/theme/domain/: theme.py  theme_repository.py
api/src/api/infra/cosmosDB/: cosmosRepository.py
api/src/api/infra/storageContainer/: exceptions.py  storageContainerRepository.py
api/src/api/infra/storageQueue/: StorageQueueService.py
api/src/api/quart_project/: app.py  routes.py
api/src/core/: log.py
api/src/core/document/domain/: document.py  document_repository.py
api/src/core/theme/domain/: theme.py  theme_repository.py
api/src/decorators/: authentication.py
api/src/decorators/models/: User.py
api/src/infra/cosmosDB/: cosmosRepository.py  exceptions.py
api/src/infra/cosmosDB/repositories/: cosmosDB_document_repository.py  cosmosDB_theme_repository.py
api/src/infra/middlewares/: authentication.py
api/src/infra/storageContainer/: storageContainerRepository.py
api/src/infra/storageContainer/repositories/: storage_container_document_repository.py
api/src/infra/storageQueue/: StorageQueueService.py
api/src/quart_project/: app.py  routes.py
(+72 files in other folders)
