[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Carlos Daniel Rigoni <icarlosrigoni@gmail.com>"]
readme = "README.md"
packages = [{ include = "api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.5"
pytest = "^8.2.0"
hypercorn = "^0.14.0"

pymongo = "^4.7.2"
azure-storage-queue = "^12.10.0"
azure-cosmos = "^4.6.0"
python-dotenv = "^1.0.1"
azure-storage-blob = "^12.20.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "api.quart_project.app:run"
